[package]
name = "image_effects"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.88"
base64 = "0.21.5"
image = "0.24.7"

[dependencies.web-sys]
version = "0.3.65"
features = ['console']
